// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[SNAPSHOT][Componentes][Common][ToastNotifications] - Notificación (advertencia). Debe pintar el componente con los siguientes modificadores: (Tipo: Advertencia)(Origen: arriba-izquierda). 1`] = `
.c3 {
  display: inline-block;
  fill: #FFF;
  height: 40px;
  margin: 0px;
  vertical-align: middle;
  width: 40px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0 {
  background-color: #FF9700;
  border-radius: 5px;
  box-shadow: 0 1px 8px 0 rgba(0,0,0,0.5);
  box-sizing: border-box;
  max-width: 420px;
  min-width: 250px;
  opacity: 0;
  padding: 15px;
  position: fixed;
  z-index: 996;
  left: 30px;
  top: -100%;
}

.c1 {
  background-color: transparent;
  background-image: url("data:image/svg+xml;base64,PHN2ZyB2ZXJzaW9uPSIxLjEiIGlkPSJDYXBhXzEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgeG1sbnM6eGxpbms9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkveGxpbmsiIHg9IjBweCIgeT0iMHB4IiB3aWR0aD0iMzM5LjE3N3B4IiBoZWlnaHQ9IjMzOS4xNzdweCIgdmlld0JveD0iMCAwIDMzOS4xNzcgMzM5LjE3NyIgc3R5bGU9ImVuYWJsZS1iYWNrZ3JvdW5kOm5ldyAwIDAgMzM5LjE3NyAzMzkuMTc3OyBmaWxsOiB3aGl0ZTsiIHhtbDpzcGFjZT0icHJlc2VydmUiPjxnPjxwYXRoIGQ9Ik0yNDcuMjQ0LDE2OS41OWw4My45MzgtODMuOTM4YzUuMzMyLTUuMzI3LDcuOTk0LTExLjc5OCw3Ljk5NC0xOS40MTRjMC03LjYxNC0yLjY2OS0xNC4wODQtNy45OTQtMTkuNDE0TDI5Mi4zNTUsNy45OTNDMjg3LjAyNiwyLjY2NSwyODAuNTU2LDAsMjcyLjk0NCwwYy03LjYxNywwLTE0LjA4NSwyLjY2NS0xOS40MTcsNy45OTNMMTY5LjU5LDkxLjkzMUw4NS42NTEsNy45OTNDODAuMzI1LDIuNjY1LDczLjg1NCwwLDY2LjIzNywwYy03LjYxMSwwLTE0LjA4MywyLjY2NS0xOS40MTQsNy45OTNMNy45OTQsNDYuODI0QzIuNjY3LDUyLjE1LDAsNTguNjI0LDAsNjYuMjM4YzAsNy42MTYsMi42NjQsMTQuMDg0LDcuOTk0LDE5LjQxNGw4My45MzcsODMuOTM4TDcuOTk0LDI1My41MjhDMi42NjcsMjU4Ljg1OSwwLDI2NS4zMjcsMCwyNzIuOTQ1YzAsNy42MSwyLjY2NCwxNC4wODIsNy45OTQsMTkuNDFsMzguODMsMzguODI4YzUuMzMsNS4zMzIsMTEuODAzLDcuOTk0LDE5LjQxNCw3Ljk5NGM3LjYxNiwwLDE0LjA4NC0yLjY2OSwxOS40MTQtNy45OTRsODMuOTM5LTgzLjkzOGw4My45NDQsODMuOTM4YzUuMzI4LDUuMzMyLDExLjc5Myw3Ljk5NCwxOS40MTcsNy45OTRjNy42MTEsMCwxNC4wODItMi42NjksMTkuNDExLTcuOTk0bDM4LjgyLTM4LjgyOGM1LjMzMi01LjMyNCw3Ljk5NC0xMS44LDcuOTk0LTE5LjQxYzAtNy42MTgtMi42NjItMTQuMDg2LTcuOTk0LTE5LjQxN0wyNDcuMjQ0LDE2OS41OXoiLz48L2c+PC9zdmc+");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 10px 10px;
  border: none;
  cursor: pointer;
  height: 10px;
  padding: 0px;
  position: absolute;
  right: 10px;
  top: 10px;
  width: 10px;
}

.c2 {
  display: inline-block;
  float: left;
  height: auto;
  margin: 0px;
  padding: 0px;
  width: 40px;
}

.c4 {
  box-sizing: border-box;
  display: inline-block;
  float: left;
  height: auto;
  margin: 0px;
  padding: 0px 0px 0px 15px;
  width: calc(100% - 40px);
}

.c5 {
  color: #FFF;
  display: block;
  font-family: "Open Sans",sans-serif;
  font-size: 14px;
  font-weight: bold;
  margin-bottom: 10px;
  margin-right: 20px;
  text-align: left;
  white-space: nowrap;
  width: 100%;
}

@media screen and (max-width:767px) {
  .c0 {
    border-radius: 0px;
    left: 0px;
    width: 100%;
  }
}

@media screen and (min-width:768px) and (max-width:991px) {
  .c0 {
    border-radius: 0px;
    left: 0px;
    width: 100%;
  }
}

<div
  className="c0"
  from="top"
>
  <button
    className="c1"
    onClick={[Function]}
    type="button"
  />
  <div
    className="c2"
  >
    <svg
      className="c3"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<g>
            <path d=\\"M507.345,439.683L288.084,37.688c-3.237-5.899-7.71-10.564-13.429-13.988c-5.705-3.427-11.893-5.142-18.554-5.142
                s-12.85,1.718-18.558,5.142c-5.708,3.424-10.184,8.089-13.418,13.988L4.859,439.683c-6.663,11.998-6.473,23.989,0.57,35.98
                c3.239,5.517,7.664,9.897,13.278,13.128c5.618,3.237,11.66,4.859,18.132,4.859h438.529c6.479,0,12.519-1.622,18.134-4.859
                c5.62-3.23,10.038-7.611,13.278-13.128C513.823,463.665,514.015,451.681,507.345,439.683z M292.655,411.132
                c0,2.662-0.91,4.897-2.71,6.704c-1.807,1.811-3.949,2.71-6.427,2.71h-54.816c-2.474,0-4.616-0.899-6.423-2.71
                c-1.809-1.807-2.713-4.042-2.713-6.704v-54.248c0-2.662,0.905-4.897,2.713-6.704c1.807-1.811,3.946-2.71,6.423-2.71h54.812
                c2.479,0,4.62,0.899,6.428,2.71c1.803,1.807,2.71,4.042,2.71,6.704v54.248H292.655z M292.088,304.357
                c-0.198,1.902-1.198,3.47-3.001,4.709c-1.811,1.238-4.046,1.854-6.711,1.854h-52.82c-2.663,0-4.947-0.62-6.849-1.854
                c-1.908-1.243-2.858-2.807-2.858-4.716l-4.853-130.47c0-2.667,0.953-4.665,2.856-5.996c2.474-2.093,4.758-3.14,6.854-3.14h62.809
                c2.098,0,4.38,1.043,6.854,3.14c1.902,1.331,2.851,3.14,2.851,5.424L292.088,304.357z\\"/>
        </g>",
        }
      }
      height="40px"
      icon="warning"
      preserveAspectRatio="none"
      vectorEffect="non-scaling-stroke"
      viewBox="0 0 512.000 512.000"
      width="40px"
      x="0px"
      y="0px"
    />
  </div>
  <div
    className="c4"
  >
    <label
      className="c5"
    >
      Notificación tipo "tostada".
    </label>
  </div>
</div>
`;

exports[`[SNAPSHOT][Componentes][Common][ToastNotifications] - Notificación (error). Debe pintar el componente con los siguientes modificadores: (Tipo: Error)(Origen: abajo-derecha). 1`] = `
.c3 {
  display: inline-block;
  fill: #FFF;
  height: 40px;
  margin: 0px;
  vertical-align: middle;
  width: 40px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0 {
  background-color: #E51D24;
  border-radius: 5px;
  box-shadow: 0 1px 8px 0 rgba(0,0,0,0.5);
  box-sizing: border-box;
  max-width: 420px;
  min-width: 250px;
  opacity: 0;
  padding: 15px;
  position: fixed;
  z-index: 996;
  right: 30px;
  bottom: -100%;
}

.c1 {
  background-color: transparent;
  background-image: url("data:image/svg+xml;base64,PHN2ZyB2ZXJzaW9uPSIxLjEiIGlkPSJDYXBhXzEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgeG1sbnM6eGxpbms9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkveGxpbmsiIHg9IjBweCIgeT0iMHB4IiB3aWR0aD0iMzM5LjE3N3B4IiBoZWlnaHQ9IjMzOS4xNzdweCIgdmlld0JveD0iMCAwIDMzOS4xNzcgMzM5LjE3NyIgc3R5bGU9ImVuYWJsZS1iYWNrZ3JvdW5kOm5ldyAwIDAgMzM5LjE3NyAzMzkuMTc3OyBmaWxsOiB3aGl0ZTsiIHhtbDpzcGFjZT0icHJlc2VydmUiPjxnPjxwYXRoIGQ9Ik0yNDcuMjQ0LDE2OS41OWw4My45MzgtODMuOTM4YzUuMzMyLTUuMzI3LDcuOTk0LTExLjc5OCw3Ljk5NC0xOS40MTRjMC03LjYxNC0yLjY2OS0xNC4wODQtNy45OTQtMTkuNDE0TDI5Mi4zNTUsNy45OTNDMjg3LjAyNiwyLjY2NSwyODAuNTU2LDAsMjcyLjk0NCwwYy03LjYxNywwLTE0LjA4NSwyLjY2NS0xOS40MTcsNy45OTNMMTY5LjU5LDkxLjkzMUw4NS42NTEsNy45OTNDODAuMzI1LDIuNjY1LDczLjg1NCwwLDY2LjIzNywwYy03LjYxMSwwLTE0LjA4MywyLjY2NS0xOS40MTQsNy45OTNMNy45OTQsNDYuODI0QzIuNjY3LDUyLjE1LDAsNTguNjI0LDAsNjYuMjM4YzAsNy42MTYsMi42NjQsMTQuMDg0LDcuOTk0LDE5LjQxNGw4My45MzcsODMuOTM4TDcuOTk0LDI1My41MjhDMi42NjcsMjU4Ljg1OSwwLDI2NS4zMjcsMCwyNzIuOTQ1YzAsNy42MSwyLjY2NCwxNC4wODIsNy45OTQsMTkuNDFsMzguODMsMzguODI4YzUuMzMsNS4zMzIsMTEuODAzLDcuOTk0LDE5LjQxNCw3Ljk5NGM3LjYxNiwwLDE0LjA4NC0yLjY2OSwxOS40MTQtNy45OTRsODMuOTM5LTgzLjkzOGw4My45NDQsODMuOTM4YzUuMzI4LDUuMzMyLDExLjc5Myw3Ljk5NCwxOS40MTcsNy45OTRjNy42MTEsMCwxNC4wODItMi42NjksMTkuNDExLTcuOTk0bDM4LjgyLTM4LjgyOGM1LjMzMi01LjMyNCw3Ljk5NC0xMS44LDcuOTk0LTE5LjQxYzAtNy42MTgtMi42NjItMTQuMDg2LTcuOTk0LTE5LjQxN0wyNDcuMjQ0LDE2OS41OXoiLz48L2c+PC9zdmc+");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 10px 10px;
  border: none;
  cursor: pointer;
  height: 10px;
  padding: 0px;
  position: absolute;
  right: 10px;
  top: 10px;
  width: 10px;
}

.c2 {
  display: inline-block;
  float: left;
  height: auto;
  margin: 0px;
  padding: 0px;
  width: 40px;
}

.c4 {
  box-sizing: border-box;
  display: inline-block;
  float: left;
  height: auto;
  margin: 0px;
  padding: 0px 0px 0px 15px;
  width: calc(100% - 40px);
}

.c5 {
  color: #FFF;
  display: block;
  font-family: "Open Sans",sans-serif;
  font-size: 14px;
  font-weight: bold;
  margin-bottom: 10px;
  margin-right: 20px;
  text-align: left;
  white-space: nowrap;
  width: 100%;
}

.c6 {
  color: #FFF;
  display: block;
  font-family: "Open Sans",sans-serif;
  font-size: 12px;
  font-weight: normal;
  text-align: left;
  width: 100%;
}

@media screen and (max-width:767px) {
  .c0 {
    border-radius: 0px;
    left: 0px;
    width: 100%;
  }
}

@media screen and (min-width:768px) and (max-width:991px) {
  .c0 {
    border-radius: 0px;
    left: 0px;
    width: 100%;
  }
}

<div
  className="c0"
  from="bottom"
>
  <button
    className="c1"
    onClick={[Function]}
    type="button"
  />
  <div
    className="c2"
  >
    <svg
      className="c3"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<g>
            <path d=\\"M409.133,109.203c-19.608-33.592-46.205-60.189-79.798-79.796C295.736,9.801,259.058,0,219.273,0
                c-39.781,0-76.47,9.801-110.063,29.407c-33.595,19.604-60.192,46.201-79.8,79.796C9.801,142.8,0,179.489,0,219.267
                c0,39.78,9.804,76.463,29.407,110.062c19.607,33.592,46.204,60.189,79.799,79.798c33.597,19.605,70.283,29.407,110.063,29.407
                s76.47-9.802,110.065-29.407c33.593-19.602,60.189-46.206,79.795-79.798c19.603-33.596,29.403-70.284,29.403-110.062
                C438.533,179.485,428.732,142.795,409.133,109.203z M322.621,270.939c3.617,3.613,5.428,7.905,5.428,12.854
                c0,5.133-1.811,9.514-5.428,13.127l-25.693,25.701c-3.614,3.613-7.994,5.42-13.135,5.42c-4.948,0-9.236-1.807-12.847-5.42
                l-51.676-51.682l-51.678,51.682c-3.616,3.613-7.898,5.42-12.847,5.42c-5.14,0-9.517-1.807-13.134-5.42l-25.697-25.701
                c-3.616-3.613-5.424-7.994-5.424-13.127c0-4.948,1.809-9.24,5.424-12.854l51.678-51.673l-51.678-51.678
                c-3.616-3.612-5.424-7.898-5.424-12.847c0-5.14,1.809-9.517,5.424-13.134l25.697-25.693c3.617-3.616,7.994-5.424,13.134-5.424
                c4.949,0,9.231,1.809,12.847,5.424l51.678,51.674l51.676-51.674c3.61-3.616,7.898-5.424,12.847-5.424
                c5.141,0,9.521,1.809,13.135,5.424l25.693,25.693c3.617,3.617,5.428,7.994,5.428,13.134c0,4.948-1.811,9.235-5.428,12.847
                l-51.675,51.678L322.621,270.939z\\"/>
        </g>",
        }
      }
      height="40px"
      icon="cross"
      preserveAspectRatio="none"
      vectorEffect="non-scaling-stroke"
      viewBox="0 0 512.000 512.000"
      width="40px"
      x="0px"
      y="0px"
    />
  </div>
  <div
    className="c4"
  >
    <label
      className="c5"
    >
      Notificación tipo "tostada".
    </label>
    <label
      className="c6"
    >
      Si, es una notificación tipo "tostada".
    </label>
  </div>
</div>
`;

exports[`[SNAPSHOT][Componentes][Common][ToastNotifications] - Notificación (información). Debe pintar el componente con los siguientes modificadores: (Tipo: Información)(Origen: arriba-derecha). 1`] = `
.c3 {
  display: inline-block;
  fill: #FFF;
  height: 40px;
  margin: 0px;
  vertical-align: middle;
  width: 40px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0 {
  background-color: #1476FB;
  border-radius: 5px;
  box-shadow: 0 1px 8px 0 rgba(0,0,0,0.5);
  box-sizing: border-box;
  max-width: 420px;
  min-width: 250px;
  opacity: 0;
  padding: 15px;
  position: fixed;
  z-index: 996;
  right: 30px;
  top: -100%;
}

.c1 {
  background-color: transparent;
  background-image: url("data:image/svg+xml;base64,PHN2ZyB2ZXJzaW9uPSIxLjEiIGlkPSJDYXBhXzEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgeG1sbnM6eGxpbms9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkveGxpbmsiIHg9IjBweCIgeT0iMHB4IiB3aWR0aD0iMzM5LjE3N3B4IiBoZWlnaHQ9IjMzOS4xNzdweCIgdmlld0JveD0iMCAwIDMzOS4xNzcgMzM5LjE3NyIgc3R5bGU9ImVuYWJsZS1iYWNrZ3JvdW5kOm5ldyAwIDAgMzM5LjE3NyAzMzkuMTc3OyBmaWxsOiB3aGl0ZTsiIHhtbDpzcGFjZT0icHJlc2VydmUiPjxnPjxwYXRoIGQ9Ik0yNDcuMjQ0LDE2OS41OWw4My45MzgtODMuOTM4YzUuMzMyLTUuMzI3LDcuOTk0LTExLjc5OCw3Ljk5NC0xOS40MTRjMC03LjYxNC0yLjY2OS0xNC4wODQtNy45OTQtMTkuNDE0TDI5Mi4zNTUsNy45OTNDMjg3LjAyNiwyLjY2NSwyODAuNTU2LDAsMjcyLjk0NCwwYy03LjYxNywwLTE0LjA4NSwyLjY2NS0xOS40MTcsNy45OTNMMTY5LjU5LDkxLjkzMUw4NS42NTEsNy45OTNDODAuMzI1LDIuNjY1LDczLjg1NCwwLDY2LjIzNywwYy03LjYxMSwwLTE0LjA4MywyLjY2NS0xOS40MTQsNy45OTNMNy45OTQsNDYuODI0QzIuNjY3LDUyLjE1LDAsNTguNjI0LDAsNjYuMjM4YzAsNy42MTYsMi42NjQsMTQuMDg0LDcuOTk0LDE5LjQxNGw4My45MzcsODMuOTM4TDcuOTk0LDI1My41MjhDMi42NjcsMjU4Ljg1OSwwLDI2NS4zMjcsMCwyNzIuOTQ1YzAsNy42MSwyLjY2NCwxNC4wODIsNy45OTQsMTkuNDFsMzguODMsMzguODI4YzUuMzMsNS4zMzIsMTEuODAzLDcuOTk0LDE5LjQxNCw3Ljk5NGM3LjYxNiwwLDE0LjA4NC0yLjY2OSwxOS40MTQtNy45OTRsODMuOTM5LTgzLjkzOGw4My45NDQsODMuOTM4YzUuMzI4LDUuMzMyLDExLjc5Myw3Ljk5NCwxOS40MTcsNy45OTRjNy42MTEsMCwxNC4wODItMi42NjksMTkuNDExLTcuOTk0bDM4LjgyLTM4LjgyOGM1LjMzMi01LjMyNCw3Ljk5NC0xMS44LDcuOTk0LTE5LjQxYzAtNy42MTgtMi42NjItMTQuMDg2LTcuOTk0LTE5LjQxN0wyNDcuMjQ0LDE2OS41OXoiLz48L2c+PC9zdmc+");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 10px 10px;
  border: none;
  cursor: pointer;
  height: 10px;
  padding: 0px;
  position: absolute;
  right: 10px;
  top: 10px;
  width: 10px;
}

.c2 {
  display: inline-block;
  float: left;
  height: auto;
  margin: 0px;
  padding: 0px;
  width: 40px;
}

.c4 {
  box-sizing: border-box;
  display: inline-block;
  float: left;
  height: auto;
  margin: 0px;
  padding: 0px 0px 0px 15px;
  width: calc(100% - 40px);
}

.c5 {
  color: #FFF;
  display: block;
  font-family: "Open Sans",sans-serif;
  font-size: 14px;
  font-weight: bold;
  margin-bottom: 10px;
  margin-right: 20px;
  text-align: left;
  white-space: nowrap;
  width: 100%;
}

@media screen and (max-width:767px) {
  .c0 {
    border-radius: 0px;
    left: 0px;
    width: 100%;
  }
}

@media screen and (min-width:768px) and (max-width:991px) {
  .c0 {
    border-radius: 0px;
    left: 0px;
    width: 100%;
  }
}

<div
  className="c0"
  from="top"
>
  <button
    className="c1"
    onClick={[Function]}
    type="button"
  />
  <div
    className="c2"
  >
    <svg
      className="c3"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<g>
            <path d=\\"M409.133,109.203c-19.608-33.592-46.205-60.189-79.798-79.796C295.736,9.801,259.058,0,219.273,0
                c-39.781,0-76.47,9.801-110.063,29.407c-33.595,19.604-60.192,46.201-79.8,79.796C9.801,142.8,0,179.489,0,219.267
                c0,39.78,9.804,76.463,29.407,110.062c19.607,33.592,46.204,60.189,79.799,79.798c33.597,19.605,70.283,29.407,110.063,29.407
                s76.47-9.802,110.065-29.407c33.593-19.602,60.189-46.206,79.795-79.798c19.603-33.596,29.403-70.284,29.403-110.062
                C438.533,179.485,428.732,142.795,409.133,109.203z M182.727,54.813c0-2.666,0.855-4.853,2.57-6.565
                c1.712-1.711,3.903-2.57,6.567-2.57h54.82c2.662,0,4.853,0.859,6.561,2.57c1.711,1.712,2.573,3.899,2.573,6.565v45.682
                c0,2.664-0.862,4.854-2.573,6.564c-1.708,1.712-3.898,2.568-6.561,2.568h-54.82c-2.664,0-4.854-0.856-6.567-2.568
                c-1.715-1.709-2.57-3.9-2.57-6.564V54.813z M292.359,356.309c0,2.662-0.863,4.853-2.57,6.561c-1.704,1.714-3.895,2.57-6.563,2.57
                H155.317c-2.667,0-4.854-0.856-6.567-2.57c-1.712-1.708-2.568-3.898-2.568-6.564v-45.682c0-2.67,0.856-4.853,2.568-6.567
                c1.713-1.708,3.903-2.57,6.567-2.57h27.41v-91.358h-27.41c-2.667,0-4.853-0.855-6.567-2.568c-1.712-1.711-2.568-3.901-2.568-6.567
                v-45.679c0-2.666,0.856-4.853,2.568-6.567c1.715-1.713,3.905-2.568,6.567-2.568h91.367c2.662,0,4.853,0.855,6.561,2.568
                c1.711,1.714,2.573,3.901,2.573,6.567v146.179h27.401c2.669,0,4.859,0.855,6.57,2.566c1.704,1.712,2.566,3.901,2.566,6.567v45.683
                H292.359z\\"/>
        </g>",
        }
      }
      height="40px"
      icon="information"
      preserveAspectRatio="none"
      vectorEffect="non-scaling-stroke"
      viewBox="0 0 512.000 512.000"
      width="40px"
      x="0px"
      y="0px"
    />
  </div>
  <div
    className="c4"
  >
    <label
      className="c5"
    >
      Notificación tipo "tostada".
    </label>
    <label>
      Si, es una notificación tipo "tostada".
    </label>
  </div>
</div>
`;

exports[`[SNAPSHOT][Componentes][Common][ToastNotifications] - Notificación (éxito). Debe pintar el componente con los siguientes modificadores: (Tipo: Éxito)(Origen: abajo-izquierda). 1`] = `
.c3 {
  display: inline-block;
  fill: #FFF;
  height: 40px;
  margin: 0px;
  vertical-align: middle;
  width: 40px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0 {
  background-color: #4CB050;
  border-radius: 5px;
  box-shadow: 0 1px 8px 0 rgba(0,0,0,0.5);
  box-sizing: border-box;
  max-width: 420px;
  min-width: 250px;
  opacity: 0;
  padding: 15px;
  position: fixed;
  z-index: 996;
  left: 30px;
  bottom: -100%;
}

.c1 {
  background-color: transparent;
  background-image: url("data:image/svg+xml;base64,PHN2ZyB2ZXJzaW9uPSIxLjEiIGlkPSJDYXBhXzEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgeG1sbnM6eGxpbms9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkveGxpbmsiIHg9IjBweCIgeT0iMHB4IiB3aWR0aD0iMzM5LjE3N3B4IiBoZWlnaHQ9IjMzOS4xNzdweCIgdmlld0JveD0iMCAwIDMzOS4xNzcgMzM5LjE3NyIgc3R5bGU9ImVuYWJsZS1iYWNrZ3JvdW5kOm5ldyAwIDAgMzM5LjE3NyAzMzkuMTc3OyBmaWxsOiB3aGl0ZTsiIHhtbDpzcGFjZT0icHJlc2VydmUiPjxnPjxwYXRoIGQ9Ik0yNDcuMjQ0LDE2OS41OWw4My45MzgtODMuOTM4YzUuMzMyLTUuMzI3LDcuOTk0LTExLjc5OCw3Ljk5NC0xOS40MTRjMC03LjYxNC0yLjY2OS0xNC4wODQtNy45OTQtMTkuNDE0TDI5Mi4zNTUsNy45OTNDMjg3LjAyNiwyLjY2NSwyODAuNTU2LDAsMjcyLjk0NCwwYy03LjYxNywwLTE0LjA4NSwyLjY2NS0xOS40MTcsNy45OTNMMTY5LjU5LDkxLjkzMUw4NS42NTEsNy45OTNDODAuMzI1LDIuNjY1LDczLjg1NCwwLDY2LjIzNywwYy03LjYxMSwwLTE0LjA4MywyLjY2NS0xOS40MTQsNy45OTNMNy45OTQsNDYuODI0QzIuNjY3LDUyLjE1LDAsNTguNjI0LDAsNjYuMjM4YzAsNy42MTYsMi42NjQsMTQuMDg0LDcuOTk0LDE5LjQxNGw4My45MzcsODMuOTM4TDcuOTk0LDI1My41MjhDMi42NjcsMjU4Ljg1OSwwLDI2NS4zMjcsMCwyNzIuOTQ1YzAsNy42MSwyLjY2NCwxNC4wODIsNy45OTQsMTkuNDFsMzguODMsMzguODI4YzUuMzMsNS4zMzIsMTEuODAzLDcuOTk0LDE5LjQxNCw3Ljk5NGM3LjYxNiwwLDE0LjA4NC0yLjY2OSwxOS40MTQtNy45OTRsODMuOTM5LTgzLjkzOGw4My45NDQsODMuOTM4YzUuMzI4LDUuMzMyLDExLjc5Myw3Ljk5NCwxOS40MTcsNy45OTRjNy42MTEsMCwxNC4wODItMi42NjksMTkuNDExLTcuOTk0bDM4LjgyLTM4LjgyOGM1LjMzMi01LjMyNCw3Ljk5NC0xMS44LDcuOTk0LTE5LjQxYzAtNy42MTgtMi42NjItMTQuMDg2LTcuOTk0LTE5LjQxN0wyNDcuMjQ0LDE2OS41OXoiLz48L2c+PC9zdmc+");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 10px 10px;
  border: none;
  cursor: pointer;
  height: 10px;
  padding: 0px;
  position: absolute;
  right: 10px;
  top: 10px;
  width: 10px;
}

.c2 {
  display: inline-block;
  float: left;
  height: auto;
  margin: 0px;
  padding: 0px;
  width: 40px;
}

.c4 {
  box-sizing: border-box;
  display: inline-block;
  float: left;
  height: auto;
  margin: 0px;
  padding: 0px 0px 0px 15px;
  width: calc(100% - 40px);
}

.c5 {
  color: #FFF;
  display: block;
  font-family: "Open Sans",sans-serif;
  font-size: 14px;
  font-weight: bold;
  margin-bottom: 10px;
  margin-right: 20px;
  text-align: left;
  white-space: nowrap;
  width: 100%;
}

.c6 {
  color: #FFF;
  display: block;
  font-family: "Open Sans",sans-serif;
  font-size: 12px;
  font-weight: normal;
  text-align: left;
  width: 100%;
}

@media screen and (max-width:767px) {
  .c0 {
    border-radius: 0px;
    left: 0px;
    width: 100%;
  }
}

@media screen and (min-width:768px) and (max-width:991px) {
  .c0 {
    border-radius: 0px;
    left: 0px;
    width: 100%;
  }
}

<div
  className="c0"
  from="bottom"
>
  <button
    className="c1"
    onClick={[Function]}
    type="button"
  />
  <div
    className="c2"
  >
    <svg
      className="c3"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<g>
            <path d=\\"M409.133,109.203c-19.608-33.592-46.205-60.189-79.798-79.796C295.736,9.801,259.058,0,219.273,0
                c-39.781,0-76.47,9.801-110.063,29.407c-33.595,19.604-60.192,46.201-79.8,79.796C9.801,142.8,0,179.489,0,219.267
                c0,39.78,9.804,76.463,29.407,110.062c19.607,33.592,46.204,60.189,79.799,79.798c33.597,19.605,70.283,29.407,110.063,29.407
                s76.47-9.802,110.065-29.407c33.593-19.602,60.189-46.206,79.795-79.798c19.603-33.596,29.403-70.284,29.403-110.062
                C438.533,179.485,428.732,142.795,409.133,109.203z M361.445,185.863L206.42,340.889c-3.617,3.62-7.992,5.428-13.134,5.428
                c-4.948,0-9.229-1.808-12.847-5.428L77.083,237.539c-3.422-3.429-5.137-7.703-5.137-12.847c0-5.328,1.709-9.709,5.137-13.136
                l25.981-25.693c3.621-3.616,7.898-5.424,12.85-5.424s9.235,1.809,12.85,5.424l64.525,64.523l116.485-116.199
                c3.617-3.617,7.898-5.426,12.847-5.426c4.945,0,9.233,1.809,12.847,5.426l25.981,25.697c3.432,3.424,5.14,7.801,5.14,13.129
                C366.589,178.154,364.881,182.437,361.445,185.863z\\"/>
        </g>",
        }
      }
      height="40px"
      icon="checked"
      preserveAspectRatio="none"
      vectorEffect="non-scaling-stroke"
      viewBox="0 0 512.000 512.000"
      width="40px"
      x="0px"
      y="0px"
    />
  </div>
  <div
    className="c4"
  >
    <label
      className="c5"
    >
      Notificación tipo "tostada".
    </label>
    <label
      className="c6"
    >
      Si, es una notificación tipo "tostada".
    </label>
  </div>
</div>
`;
